tests/fixtures/errors/missing_include.cpp
#include <nonexistent.h>
int main() {}